Included ticket number in template

--- a/templates/submitted.gohtml
+++ b/templates/submitted.gohtml
@@ -7,5 +7,6 @@
 <body>
 <h1>Ticket Submitted</h1>
 <p>Your ticket has been submitted!</p>
+<p>Your ticket number is {{.Number}}</p>
 </body>
 </html>
