Separated comment into a separate struct

--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -20,7 +20,7 @@
         </select>
     </p>
     <p>Initials: <input type="text" name="initials"></p>
-    <p>Additional Comments: <input type="text" name="comments"></p>
+    <p>Additional Comments: <input type="text" name="comment.text"></p>
     <input type="submit" value="Submit">
 </form>
 </body>
