--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Ticket {{.Number}}</h1>
-<p>Submitted ot {{.Comment.Timestamp.Format "January 02 2006 3:04pm MST"}}
+<p>Submitted on {{.Comment.Timestamp.Format "January 02 2006 3:04pm MST"}}
 <p>Userid: {{.UserID}}</p>
 <p>Zendesk Ticket: {{.ZDNum}}</p>
 <p>Issue Type: {{.IssueType}}</p>
