Included link in viewticket templand removed redirect in main

--- a/templates/submitted.gohtml
+++ b/templates/submitted.gohtml
@@ -8,5 +8,6 @@
 <h1>Ticket Submitted</h1>
 <p>Your ticket has been submitted!</p>
 <p>Your ticket number is {{.Number}}</p>
+<p><a href="/view/{{.Number}}">Click here to view the ticket</a></p>
 </body>
 </html>
