--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -11,12 +11,12 @@
     <p>UserID: <input type="number" name="userid"></p>
     <p>
         Issue:
-        <select name="issuetype">
+        <select name="issue">
             <option disabled selected value> -- select an option -- </option>
-            <option value="refund">Refund</option>
-            <option value="terminated">Billing Terminated</option>
-            <option value="dna_fp">DNA FP Reactivation</option>
-            <option value="extension">Billing Extension</option>
+            <option value="0">Refund</option>
+            <option value="1">Billing Terminated</option>
+            <option value="2">DNA FP Reactivation</option>
+            <option value="3">Billing Extension</option>
         </select>
     </p>
     <p>Initials: <input type="text" name="initials"></p>
