--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -9,7 +9,7 @@
 <p>Submitted on {{.Comment.Timestamp.Format "January 02 2006 3:04pm MST"}}
 <p>Userid: {{.UserID}}</p>
 <p>Zendesk Ticket: {{.ZDNum}}</p>
-<p>Issue Type: {{.IssueType}}</p>
+<p>Issue Type: {{.Issue}}</p>
 <p>Initials: {{.Initials}}</p>
 <p>Solved: {{.Solved}}</p>
 <p>Additional info: {{.Comment.Text}}
