Added custom header to gohtml files and included search functionality.

--- a/templates/submitted.gohtml
+++ b/templates/submitted.gohtml
@@ -5,6 +5,7 @@
 <title>Ticket Submitted</title>
 </head>
 <body>
+{{template "header"}}
 <h1>Ticket Submitted</h1>
 <p>Your ticket has been submitted!</p>
 <p>Your ticket number is {{.Number}}</p>
