--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -5,7 +5,8 @@
 <title>New ticket</title>
 </head>
 <body>
-<h1>Create ticket</h1>
+{{template "header"}}
+<h1>New ticket</h1>
 <form action="/create" method="POST">
     <p>ZenDesk Ticket Number: <input type="number" name="zdnum"></p>
     <p>UserID: <input type="number" name="userid"></p>
