--- a/templates/header.gohtml
+++ b/templates/header.gohtml
@@ -1,3 +1,24 @@
 {{define "header"}}
-<a href="/new">New Ticket</a> <a href="/view/open">View Open</a> <a href="/view/solved">View Solved</a> <form action="/view/" method="POST"><input type="number" name="number" placeholder="Ticket Number"><input type="submit" value="Submit"></form>
+<header>
+    <div class="row">
+        <div class="content-block"></div>
+        <div class="col-2 col-start-2">
+            <h2><a href="/new">New Ticket</a></h2>
+        </div>
+        <div class="col-2 col-start-4">
+            <h2><a href="/view/open">View Open</a></h2>
+        </div>
+        <div class="col-4">
+            <h2><a href="/view/solved">View Solved</a></h2>
+        </div>
+        <div class="col-3 container">
+            <form class="row" action="/view/" method="POST">
+                <div class="input-text-wrap col-2 is-search is-focused">
+                    <label class="input-text-label">Ticket Number</label>
+                    <input type="number" name="number">
+                </div>
+            </form>
+        </div>
+    </div>
+</header>
 {{end}}
