Modified ZDTicket variable and increased pagination to 10 per page

--- a/templates/header.gohtml
+++ b/templates/header.gohtml
@@ -12,7 +12,7 @@
             <h2><a href="/view/solved">View Solved</a></h2>
         </div>
         <div class="col-3 container">
-            <form class="row" action="/view/" method="POST">
+            <form class="row" action="/search/" method="GET">
                 <div class="input-text-wrap col-2 is-search is-focused">
                     <label class="input-text-label">Ticket Number</label>
                     <input type="number" name="number">
