--- a/templates/listtickets.gohtml
+++ b/templates/listtickets.gohtml
@@ -24,7 +24,7 @@
       <tr>
         <td><a href="/view/{{.Number}}">{{.Number}}</td>
         <td><a href="https://kasi.sendgrid.com/kasi/users/{{.UserID}}" target="_blank">{{.UserID}}</a></td> 
-        <td><a href="https://sendgrid.zendesk.com/agent/tickets/{{.ZDNum}}" target="_blank">{{.ZDNum}}</a></td>
+        <td><a href="https://sendgrid.zendesk.com/agent/tickets/{{.ZDTicket}}" target="_blank">{{.ZDTicket}}</a></td>
         <td>{{.Issue.ToString}}</td>
         <td>{{.Solved}}</td>
       </tr>
