--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -17,8 +17,8 @@
     <form action="/create" method="POST">
     <div class="row">
         <div class="input-text-wrap is-required is-focused col-2 col-start-2">
-            <label class="input-text-label" for="zdnum-input">Zendesk Ticket</label>
-            <input type="number" name="zdnum" id="zdnum-input">
+            <label class="input-text-label" for="zdticket-input">Zendesk Ticket</label>
+            <input type="number" name="zdticket" id="zdticket-input">
         </div>
     </div>
     <div class="row">
