--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -22,7 +22,7 @@
             </tr>
             <tr>
                 <td><strong>Zendesk Ticket</strong></td>
-                <td><span class="mono"><a href="https://sendgrid.zendesk.com/agent/tickets/{{.ZDNum}}" target="_blank">{{.ZDNum}}</a></span></td>
+                <td><span class="mono"><a href="https://sendgrid.zendesk.com/agent/tickets/{{.ZDTicket}}" target="_blank">{{.ZDTicket}}</a></span></td>
             </tr>
             <tr>
                 <td><strong>Issue Type</strong></td>
