Added required flag for input

--- a/templates/header.gohtml
+++ b/templates/header.gohtml
@@ -15,7 +15,7 @@
             <form class="row" action="/search/" method="GET">
                 <div class="input-text-wrap col-2 is-search is-focused">
                     <label class="input-text-label">Ticket Number</label>
-                    <input type="number" name="number">
+                    <input type="number" name="number" required>
                 </div>
             </form>
         </div>
