Made ticket numbers bolder

--- a/templates/listtickets.gohtml
+++ b/templates/listtickets.gohtml
@@ -25,7 +25,7 @@
       </thead>
       {{range .Tickets}}
       <tr>
-        <td><a href="/view/{{.Number}}">{{.Number}}</td>
+        <td><a href="/view/{{.Number}}"><strong>{{.Number}}</strong></td>
         <td><a href="https://kasi.sendgrid.com/kasi/users/{{.UserID}}" target="_blank">{{.UserID}}</a></td> 
         <td><a href="https://sendgrid.zendesk.com/agent/tickets/{{.ZDTicket}}" target="_blank">{{.ZDTicket}}</a></td>
         <td>{{.Issue.ToString}}</td>
