Applied Custom Stylesheet

--- a/templates/listtickets.gohtml
+++ b/templates/listtickets.gohtml
@@ -4,6 +4,7 @@
 <meta charset="UTF=8">
 <link href="https://uiux.s3.amazonaws.com/style-guide/css/style-guide.css" rel="stylesheet">
 <link href="https://uiux.s3.amazonaws.com/style-guide/css/style-guide-grid.css" rel="stylesheet">
+<link href="/assets/css/style.css" rel="stylesheet">
 <title>View Tickets</title>
 </head>
 <body>
