--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -46,13 +46,13 @@
     <div class="row">
         <div class="input-text-wrap is-required is-focused col-2 col-start-2">
             <label class="input-text-label">Initials</label>
-            <input type="text" name="initials" required>
+            <input type="text" name="initials" maxlength="8" required>
         </div>
     </div>
     <div class="row">
         <div class="textarea-wrap is-focused col-6 col-start-2">
             <label class="textarea-label" for="comment-input">Additional Comments</label>
-            <textarea class="textarea-input" id="comment-input" name="comment.text"></textarea>
+            <textarea class="textarea-input" id="comment-input" name="comment.text" maxlength="255"></textarea>
         </div>
     </div>
     <div class="row">
