--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -19,13 +19,13 @@
     <div class="row">
         <div class="input-text-wrap is-required is-focused col-2 col-start-2">
             <label class="input-text-label" for="userid-input">UserID</label>
-            <input type="number" name="userid" id="userid-input" required>
+            <input type="number" name="userid" id="userid-input" max="2147483647" required>
         </div>
     </div>
     <div class="row">
         <div class="input-text-wrap is-required is-focused col-2 col-start-2">
             <label class="input-text-label" for="zdticket-input">Zendesk Ticket</label>
-            <input type="number" name="zdticket" id="zdticket-input" required>
+            <input type="number" name="zdticket" id="zdticket-input" max="2147483647" required>
         </div>
     </div>
     <div class="row">
