--- a/templates/404.gohtml
+++ b/templates/404.gohtml
@@ -11,7 +11,8 @@
 <div class="row">
     <div class="col-6 col-start-4">
         <div class="card is-centered">
-            <h2>404 Not Found</h2>
+            <h1>Page Not Found</h1>
+            <p>
             <a href="/" class="btn btn-primary">Go back to homepage</a>
         </div>
     </div>
