Modified pagination to use offset

--- a/templates/listtickets.gohtml
+++ b/templates/listtickets.gohtml
@@ -35,7 +35,7 @@
       {{end}}
     </table>
     {{ if .NextButton}}
-    <a class="btn btn-small btn-secondary" href="/view/open?last_ticket={{.LastTicket}}">Next</a>
+    <a class="btn btn-small btn-secondary" href="/view/open/?page={{.NextPage}}">Next</a>
     {{end}}
   </div>
 </div>
