Modified hrefs to properly go to URLs

--- a/templates/header.gohtml
+++ b/templates/header.gohtml
@@ -3,13 +3,13 @@
     <div class="row">
         <div class="content-block"></div>
         <div class="col-2 col-start-2">
-            <h2><a href="/new">New Ticket</a></h2>
+            <h2><a href="/new/">New Ticket</a></h2>
         </div>
         <div class="col-2 col-start-4">
-            <h2><a href="/view/open">View Open</a></h2>
+            <h2><a href="/view/open/">View Open</a></h2>
         </div>
         <div class="col-4">
-            <h2><a href="/view/solved">View Solved</a></h2>
+            <h2><a href="/view/solved/">View Solved</a></h2>
         </div>
         <div class="col-3 container">
             <form class="row" action="/search/" method="GET">
