--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -15,7 +15,7 @@
         <table class="table-wrap is-auto-width">
             <tr>
                 <td><strong>Submitted</strong></td>
-                <td><span class="mono">{{.Comment.Timestamp | ToDateTime}}</span></td>
+                <td><span class="mono">{{.Submitted | ToDateTime}}</span></td>
             </tr>
             <tr>
                 <td><strong>UserID</strong></td>
