--- a/templates/listtickets.gohtml
+++ b/templates/listtickets.gohtml
@@ -13,7 +13,9 @@
   <div class="col-5 col-start-2">
       <h1>{{.Status.ToString}} Tickets</h1>
   </div>
-  <div class="col-8 col-start-2">
+</div>
+<div class="row">
+  <div class="col-9 col-start-2">
     <table class="table-wrap">
       <thead>
         <tr>
