Added AutoExpand JavaScript to handle TextArea

--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -5,6 +5,8 @@
 <link href="https://uiux.s3.amazonaws.com/style-guide/css/style-guide.css" rel="stylesheet">
 <link href="https://uiux.s3.amazonaws.com/style-guide/css/style-guide-grid.css" rel="stylesheet">
 <link href="/assets/css/style.css" rel="stylesheet">
+<script src="/assets/js/AutoExpand.js"></script>
+
 <title>New ticket</title>
 </head>
 <body>
@@ -52,7 +54,7 @@
     <div class="row">
         <div class="textarea-wrap is-focused col-6 col-start-2">
             <label class="textarea-label" for="comment-input">Additional Comments</label>
-            <textarea class="textarea-input" id="comment-input" name="comment.text" maxlength="255"></textarea>
+            <textarea class="textarea-input" id="comment-input" name="comment.text" rows="1" maxlength="255"></textarea>
         </div>
     </div>
     <div class="row">
