Replaced newline with HTML break

--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <td><strong>Additional Comments</strong></td>
-                <td><span class="mono">{{.Comment.Text}}</span></td>
+                <td><span class="mono">{{.Comment.Text | AddBreaks}}</span></td>
             </tr>
         </table>
     </div>
