--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td><strong>Issue Type</strong></td>
-                <td><span class="mono">{{.Issue.ToString}}</span></td>
+                <td><span class="mono">{{.Issue.String}}</span></td>
             </tr>
             <tr>
                 <td><strong>Initials</strong></td>
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td><strong>Status</strong></td>
-                <td><span class="mono">{{.Status.ToString}}</span></td>
+                <td><span class="mono">{{.Status.String}}</span></td>
             </tr>
             <tr>
                 <td><strong>Additional Comments</strong></td>
