--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -39,7 +39,7 @@
                     <option value="0">Refund</option>
                     <option value="1">Billing Terminated</option>
                     <option value="2">DNA FP Reactivation</option>
-                    <option value="3">Billing Extension</option>
+                    <option value="3">Extension</option>
                     <option value="4">MC Contacts</option>
                 </select>
             </div>
