--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -7,11 +7,11 @@
 <link href="/assets/css/style.css" rel="stylesheet">
 <script src="/assets/js/AutoExpand.js"></script>
 
-<title>New ticket</title>
+<title>New Ticket</title>
 </head>
 <body>
 <div class="body">
-    {{template "header"}}
+    {{template "header" "New"}}
     <div class="row">
         <div class="col-5 col-start-2">
             <h1>New ticket</h1>
