Commented out additional issues for now

--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -41,9 +41,10 @@
                     <option value="2">DNA FP Reactivation</option>
                     <option value="3">Extension</option>
                     <option value="4">MC Contacts</option>
+                    <!-- Will uncomment once we include these issues
                     <option value="5">Discount</option>
                     <option value="6">Force Downgrade</option>
-                    <option value="7">Undo Downgrade</option>
+                    <option value="7">Undo Downgrade</option>-->
                 </select>
             </div>
         </div>
