--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -14,7 +14,7 @@
     {{template "header" "New"}}
     <div class="row">
         <div class="col-5 col-start-2">
-            <h1>New ticket</h1>
+            <h2>New Ticket</h2>
         </div>
     </div>
     <form action="/create" method="POST">
