Removed required field from IIA checkbox

--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -71,7 +71,7 @@ $(document).on('change','#issue-input',function(){
     </div>
      <div class="row" id="IIA" style="display:none">
         <div class="input-checkbox-wrap col-3 col-start-2">
-            <input type="checkbox" id="checkbox-iia" required>
+            <input type="checkbox" id="checkbox-iia">
             <label class="input-checkbox-label" for="checkbox-iia">IIA is less than $100</label>
         </div>
     </div>
