--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -45,8 +45,8 @@
                     <option value="3">Extension</option>
                     <option value="4">MC Contacts</option>
                     <option value="5">Discount</option>
-                    <option value="6">Force Downgrade</option>
-                    <option value="7">Undo Downgrade</option>
+                    <option value="6">Force Downgrade/Cancellation</option>
+                    <option value="7">Undo Downgrade/Cancellation</option>
                 </select>
             </div>
         </div>
