--- a/templates/viewticket.gohtml
+++ b/templates/viewticket.gohtml
@@ -10,8 +10,18 @@
 <body>
 {{template "header"}}
 <div class="row">
-    <div class="col-8 col-start-2">
+    <div class="col-4 col-start-2">
         <h1>Ticket {{.Number}}</h1>
+    </div>
+    <div class="col-2">
+        <form action="/edit/{{.Number}}" method="GET">
+        <button class="btn btn-small btn-secondary" type="submit">Edit</button>
+        </form>
+    </div>
+</div>
+<div class="row">
+    <div class="col-8 col-start-2">
+            
         <table class="table-wrap is-auto-width">
             <tr>
                 <td><strong>Submitted</strong></td>
