--- a/templates/new.gohtml
+++ b/templates/new.gohtml
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="textarea-wrap is-required is-focused col-6 col-start-2">
+        <div class="textarea-wrap is-required is-focused col-6 col-start-2 autoExpand">
             <label class="textarea-label" for="comment-input">Additional Comments</label>
             <textarea class="textarea-input" id="comment-input" name="comment.text" rows="1" maxlength="200" required></textarea>
         </div>
